Keyframes pasted at wrong position when NLA strip has offset #45166

Closed
opened 2015-06-24 00:02:39 +02:00 by Willi · 6 comments

System Information
Win7/64, GTX 750 Ti

Blender Version
Broken: 2.74 official

Short description of error
If you copy&paste keyframes of an action that has been converted to an NLA strip that has been shifted in time, the keyframes are not pasted at the current frame but with a frame offset.

Exact steps for others to reproduce the error

  • Open the attached blend file: The keys at frame 80 are selected. The current frame is #120.
  • Copy & paste the keyframes. I expect them to be pasted at the current frame (#120), however, they are pasted at frame #200. This is probably due to the offset of the NLA strip, but this is not a clear usage for the user as editting is done in action space, not NLA strip space.

NLA.blend

**System Information** Win7/64, GTX 750 Ti **Blender Version** Broken: 2.74 official **Short description of error** If you copy&paste keyframes of an action that has been converted to an NLA strip that has been shifted in time, the keyframes are not pasted at the current frame but with a frame offset. **Exact steps for others to reproduce the error** - Open the attached blend file: The keys at frame 80 are selected. The current frame is #120. - Copy & paste the keyframes. I expect them to be pasted at the current frame (#120), however, they are pasted at frame #200. This is probably due to the offset of the NLA strip, but this is not a clear usage for the user as editting is done in action space, not NLA strip space. [NLA.blend](https://archive.blender.org/developer/F196999/NLA.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

Added subscriber: @mont29

Added subscriber: @mont29
Joshua Leung was assigned by Bastien Montagne 2015-06-27 16:08:02 +02:00

Joshua, will let you decide here.

Joshua, will let you decide here.

This issue was referenced by 579329388a

This issue was referenced by 579329388af58b44f545c2e4411bbd987256b923
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45166
No description provided.