Fix T45166: Keyframes pasted at wrong position when NLA strip has offset

Paste keyframes code seemed to have overlooked the NLA mapping issue, causing
keyframes to get pasted in the wrong places.